--- a/.ideavimrc
+++ b/.ideavimrc
@@ -9,6 +9,7 @@ set scrolloff=5
 " Do incremental searching.
 
 set incsearch
+set easymotion
 set relativenumber
 set nu
 set NERDTree
@@ -30,6 +31,7 @@ map sl <C-w>l
 map <Space> <C-w>w
 map <Tab> gt
 map <leader><Tab> gT
+nmap mo <Action>(MoveEditorToOppositeTabGroup)
 
 " use vim navigate documents tree on the left side
 nmap sf :NERDTree<CR>
@@ -67,6 +69,8 @@ nmap <C-/> <Action>(FindInPath)
 
 nmap ff <Action>(GotoFile)
 nmap gb <Action>(Annotate)
+
+nmap "" mqlbi"<ESC>ea"<ESC>`ql
 
 "" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
 "" Map \r to the Reformat Code action
